[package]
name = "pinaivu-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pinaivu-node"
path = "src/main.rs"

[dependencies]
# Shared protocol — path dep during local dev; switch to git once stable.
pinaivu-protocol = { path = "../coordinator  /src/pinaivu-protocol" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"

libp2p = { version = "0.56", features = [
    "tokio",
    "kad",
    "gossipsub",
    "noise",
    "yamux",
    "tcp",
    "identify",
    "ping",
    "request-response",
    "cbor",
    "macros",
    "ed25519",
] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"
futures = "0.3"
async-trait = "0.1"
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
